# tlog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: fake_train.py  report.md  review.md
tests/: test_comments.py  test_dispatch.py  test_media_export.py  test_render.py  test_report.py  test_run.py  test_store.py  test_termimg.py  test_tui_keys.py  test_tui_layout.py  test_writer.py
tlog/: __init__.py  chart.py  cli.py  comments.py  console.py  export.py  media.py  meta.py  payload.py  render.py  report.py  run.py  server.py  store.py  system.py  termimg.py  tui.py  video.py  writer.py
tlog/frontend/: app.js  index.html  style.css
