[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tlog-ml"
version = "0.3.0"
description = "Local-first experiment logger + terminal review buddy — wandb-shaped logging, full-res images/markdown in the terminal, and an editor-based comment loop for human↔agent feedback"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Philippe Hansen-Estruch" }]
keywords = ["experiment-tracking", "logging", "machine-learning", "wandb", "slurm", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]
dependencies = ["pillow>=9.0"]  # robust full-res image decode/encode in the terminal

[project.optional-dependencies]
video = ["imageio[ffmpeg]>=2.25"]  # `tlog show clip.mp4`: bundled ffmpeg, no system binary
dev = ["pytest>=7.0", "numpy"]  # widen test coverage (array image paths)

[project.urls]
Repository = "https://github.com/philippe-eecs/tlog"
Issues = "https://github.com/philippe-eecs/tlog/issues"

[project.scripts]
tlog = "tlog.cli:main"

[tool.setuptools.packages.find]
include = ["tlog*"]

[tool.setuptools.package-data]
tlog = ["frontend/*", "frontend/vendor/*"]
